on route button

--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -20,7 +20,10 @@
     "YES": "Sí",
     "MAP_BUTTON": "Mapa",
     "UNSUPPORTED_TYPE": "Format de fitxer no admès",
-    "TRACK_EMPTY": "Trajecte sense dades"
+    "TRACK_EMPTY": "Trajecte sense dades",
+    "ON_ROUTE": "Ets a la ruta!",
+    "OFF_ROUTE": "Ets fora de la ruta!",
+    "UNKNOWN_STATUS": "Seguiment de la ruta sense determinar"
   },
   "SEARCH": {
     "BUTTON": "Cercar",
@@ -36,18 +39,39 @@
     "SELECT_BOTH": "Si us plau, selecciona origen i destinació",
     "NO_ROUTE_FOUND": "No s'ha trobat cap ruta",
     "ROUTING_ERROR": "Error en el servei de rutes",
-    "GOT_LOCATION": "Ubicació obtinguda",
-    "LOCATION_ERROR": "No s'ha pogut obtenir la teva ubicació",
     "WALK": "Caminar",
     "HIKE": "Senderisme",
     "CYCLE": "Ciclisme",
     "DRIVE": "Cotxe",
     "CLEAN": "Netejar",
-    "DESCRIPTION": "Perfil de ruta",
     "LISTENING": "Escoltant...",
-    "NO_SPEECHRECOGNITION": "Reconeixement de veu no disponible",
-    "NO_DESCRIPTION": "No hi ha disponible cap descripció detallada"
+    "NO_SPEECHRECOGNITION": "Reconeixement de veu no disponible"
   },
+"ARCHIVE": {
+  "TRACKS": "Trajectes",
+  "SHOW": "Mostrar",
+  "HIDE": "Amagar",
+  "ALL": "Tots",
+  "REMOVE_TRACK": "Eliminar",
+  "EDIT_TRACK": "Editar",
+  "EXPORT_TRACK": "Exportar",
+  "ALL_DISPLAYED": "Es mostren tots els trajectes",
+  "ALL_HIDDEN": "S'han amagat tots els trajectes",
+  "VISIBLE_LABEL": "Visible",
+  "CANCEL": "Cancel·lar",
+  "HEADER": "Confirma l'esborrat",
+  "MESSAGE": "S'esborraran definitivament els trajectes marcats",
+  "TITLE": "Compartir un trajecte",
+  "TEXT": "Aquí teniu el trajecte sol·licitat",
+  "DIALOG_TITLE": "Compartiu només per Gmail",
+  "TOAST1": "S'ha compartit correctament el trajecte",
+  "TOAST2": "L'exportació ha fallat",
+  "TOAST3": "Els trajectes seleccionats s'han eliminat",
+  "TOAST4": "Error al carregar la col·lecció",
+  "LOADING_ERROR": "Error al carregar el trajecte",
+  "EMPTY_TRACKS": "No s'han trobat coordenades vàlides en els fitxers",
+  "TRACK_UPDATED": "El trajecte s'ha actualitzat correctament"
+},
   "SETTINGS": {
     "GENERAL_GROUP": "General",
     "SYSTEM_GROUP": "Sistema",
@@ -68,30 +92,6 @@
     "OFFLINE_MAPS": "Mapes Offline",
     "DOWNLOADED": "Descarregat"
   },
-  "ARCHIVE": {
-    "TRACKS": "Trajectes",
-    "SHOW": "Mostrar",
-    "HIDE": "Amagar",
-    "ALL": "tots",
-    "REMOVE_TRACK": "Eliminar",
-    "EDIT_TRACK": "Editar",
-    "EXPORT_TRACK": "Exportar",
-    "ALL_DISPLAYED": "Es mostren tots els trajectes",
-    "ALL_HIDDEN": "S'han amagat tots els trajectes",
-    "VISIBLE_LABEL": "Visible",
-    "CANCEL": "Cancel·lar",
-    "HEADER": "Confirma l'esborrat",
-    "MESSAGE": "S'esborraran definitivament els trajectes marcats",
-    "TITLE": "Compartir un trajecte",
-    "TEXT": "Aquí teniu el trajecte sol·licitat",
-    "DIALOG_TITLE": "Compartiu només per Gmail",
-    "TOAST1": "S'ha compartit correctament el trajecte",
-    "TOAST2": "L'exportació ha fallat",
-    "TOAST3": "Els trajectes seleccionats s'han eliminat",
-    "TOAST4": "Error al carregar la col·lecció",
-    "LOADING_ERROR": "Error al carregar el trajecte",
-    "EMPTY_TRACKS": "No s'han trobat coordenades vàlides en els fitxers"
-  },
   "CANVAS": {
     "ARCTITLE": "TRAJECTE DE REFERÈNCIA",
     "CURTITLE": "TRAJECTE ACTUAL",
@@ -110,11 +110,11 @@
     "FROM_START": "Distància des de l'inici",
     "TO_END": "Distància fins al final",
     "NO_RECORDING": "No hi ha cap trajecte en curs",
-    "DO_START": "Inicia una gravació per visualitzar les dades d'altitud i velocitat en temps real",
+    "DO_START": "Inicieu una gravació per visualitzar les dades d'altitud i velocitat en temps real",
     "GOTO_MAP": "Anar al mapa",
     "NO_REFERENCE": "No hi ha cap trajecte de referència",
-    "DO_SELECT": "Ves a l'arxiu i selecciona un trajecte de referència per comparar-lo amb el trajecte actual",
-    "GOTO_ARCHIVE": "Ves a l'arxiu",
+    "DO_SELECT": "Aneu a l'arxiu i seleccioneu un trajecte de referència per comparar-lo amb el trajecte actual",
+    "GOTO_ARCHIVE": "Anar a l'arxiu",
     "KM": "km",
     "PACE": "Ritme",
     "SPEED": "Velocitat",
