--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -3,10 +3,10 @@
     "TOIMAGE_FAILED": "No se ha podido generar la imagen",
     "DATA_BUTTON": "Datos",
     "ARCHIVE_BUTTON": "Archivo",
-    "SETTINGS_BUTTON": "Config.",
+    "SETTINGS_BUTTON": "Ajustes",
     "ZOOM_BUTTON": "Zoom",
     "WAYPOINT_UPDATED": "Punto de paso actualizado",
-    "CURRENT_TRACK_DELETED": "El trayecto actual se ha eliminado",
+    "CURRENT_TRACK_DELETED": "El trayecto actual ha sido eliminado",
     "TRACK_FINISHED": "El trayecto actual ha finalizado",
     "WPT_ADDED": "Se ha añadido el punto de paso",
     "SAVED": "El archivo se ha guardado correctamente",
@@ -18,9 +18,13 @@
     "NO_FILE_SELECTED": "No se ha seleccionado ningún archivo",
     "CONFIRM_SHARING": "¿Seguro que quieres compartir tu posición con otra persona?",
     "YES": "Sí",
+    "OK": "Aceptar",
     "MAP_BUTTON": "Mapa",
     "UNSUPPORTED_TYPE": "Formato de archivo no admitido",
-    "TRACK_EMPTY": "Trayecto sin datos"
+    "TRACK_EMPTY": "Trayecto sin datos",
+    "ON_ROUTE": "¡Estás en la ruta!",
+    "OFF_ROUTE": "¡Estás fuera de la ruta!",
+    "UNKNOWN": "Seguimiento de ruta sin determinar"
   },
   "SEARCH": {
     "BUTTON": "Buscar",
@@ -34,20 +38,41 @@
     "START_GUIDE": "Iniciando guía...",
     "MY_LOCATION": "Mi ubicación",
     "SELECT_BOTH": "Por favor, selecciona origen y destino",
-    "NO_ROUTE_FOUND": "No se encontró ninguna ruta",
+    "NO_ROUTE_FOUND": "No se ha encontrado ninguna ruta",
     "ROUTING_ERROR": "Error en el servicio de rutas",
-    "GOT_LOCATION": "Ubicación obtenida",
-    "LOCATION_ERROR": "No se pudo obtener tu ubicación",
     "WALK": "Caminar",
     "HIKE": "Senderismo",
     "CYCLE": "Ciclismo",
     "DRIVE": "Coche",
     "CLEAN": "Limpiar",
-    "DESCRIPTION": "Perfil de ruta",
     "LISTENING": "Escuchando...",
-    "NO_SPEECHRECOGNITION": "Reconocimiento de voz no disponible",
-    "NO_DESCRIPTION": "No hay descripción detallada disponible"
+    "NO_SPEECHRECOGNITION": "Reconocimiento de voz no disponible"
   },
+  "ARCHIVE": {
+  "TRACKS": "Trayectos",
+  "SHOW": "Mostrar",
+  "HIDE": "Ocultar",
+  "ALL": "Todos",
+  "REMOVE_TRACK": "Eliminar",
+  "EDIT_TRACK": "Editar",
+  "EXPORT_TRACK": "Exportar",
+  "ALL_DISPLAYED": "Se muestran todos los trayectos",
+  "ALL_HIDDEN": "Se han ocultado todos los trayectos",
+  "VISIBLE_LABEL": "Visible",
+  "CANCEL": "Cancelar",
+  "HEADER": "Confirmar eliminación",
+  "MESSAGE": "Se eliminarán definitivamente los trayectos marcados",
+  "TITLE": "Compartir un trayecto",
+  "TEXT": "Aquí tienes el trayecto solicitado",
+  "DIALOG_TITLE": "Compartir solo por Gmail",
+  "TOAST1": "Se ha compartido el trayecto correctamente",
+  "TOAST2": "La exportación ha fallado",
+  "TOAST3": "Los trayectos seleccionados se han eliminado",
+  "TOAST4": "Error al cargar la colección",
+  "LOADING_ERROR": "Error al cargar el trayecto",
+  "EMPTY_TRACKS": "No se han encontrado coordenadas válidas en los archivos",
+  "TRACK_UPDATED": "El trayecto se ha actualizado correctamente"
+},
   "SETTINGS": {
     "GENERAL_GROUP": "General",
     "SYSTEM_GROUP": "Sistema",
@@ -67,30 +92,6 @@
     "MAP_UPDATED": "Proveedor de mapa actualizado",
     "OFFLINE_MAPS": "Mapas Offline",
     "DOWNLOADED": "Descargado"
-  },
-  "ARCHIVE": {
-    "TRACKS": "Trayectos",
-    "SHOW": "Mostrar",
-    "HIDE": "Esconder",
-    "ALL": "todos",
-    "REMOVE_TRACK": "Eliminar",
-    "EDIT_TRACK": "Editar",
-    "EXPORT_TRACK": "Exportar",
-    "ALL_DISPLAYED": "Se muestran todos los trayectos",
-    "ALL_HIDDEN": "Se han escondido todos los trayectos",
-    "VISIBLE_LABEL": "Visible",
-    "CANCEL": "Cancelar",
-    "HEADER": "Confirma el borrado",
-    "MESSAGE": "Se borrarán definitivamente los trayectos marcados",
-    "TITLE": "Compartir un trayecto",
-    "TEXT": "Este es el trayecto solicitado",
-    "DIALOG_TITLE": "Compartir sólo por Gmail",
-    "TOAST1": "¡El trayecto se ha compartido correctamente!",
-    "TOAST2": "Ha fallado la exportación",
-    "TOAST3": "Los trayectos seleccionados han sido eliminados",
-    "TOAST4": "Error al cargar la colección",
-    "LOADING_ERROR": "Error al cargar el trayecto",
-    "EMPTY_TRACKS": "No se encontraron coordenadas válidas en los archivos"
   },
   "CANVAS": {
     "ARCTITLE": "TRAYECTO DE REFERENCIA",
