--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,16 +11,20 @@
     "WPT_ADDED": "Waypoint added",
     "SAVED": "File saved successfully",
     "NO_TRACK_FOUND": "No track found in file",
-    "IMPORTED_TRACK": "Imported track",
+    "IMPORTED_TRACK": "Track imported",
     "IMPORT_SUCCESS": "Track imported successfully",
     "ERROR_UNSUPPORTED": "Unsupported file type",
     "ERROR_IMPORT": "Error importing file",
     "NO_FILE_SELECTED": "No file selected",
     "CONFIRM_SHARING": "Are you sure you want to share your location with someone else?",
     "YES": "Yes",
+    "OK": "OK",
     "MAP_BUTTON": "Map",
     "UNSUPPORTED_TYPE": "Unsupported file format",
-    "TRACK_EMPTY": "Track without data"
+    "TRACK_EMPTY": "Track has no data",
+    "ON_ROUTE": "You are on route!",
+    "OFF_ROUTE": "You are off route!",
+    "UNKNOWN": "Route tracking undetermined"
   },
   "SEARCH": {
     "BUTTON": "Search",
@@ -35,63 +39,40 @@
     "MY_LOCATION": "My location",
     "SELECT_BOTH": "Please select both origin and destination",
     "NO_ROUTE_FOUND": "No route found",
-    "ROUTING_ERROR": "Route service error",
-    "GOT_LOCATION": "Location obtained",
-    "LOCATION_ERROR": "Could not obtain your location",
+    "ROUTING_ERROR": "Routing service error",
     "WALK": "Walk",
     "HIKE": "Hike",
     "CYCLE": "Cycle",
     "DRIVE": "Drive",
-    "CLEAN": "Clean",
-    "DESCRIPTION": "Route profile",
+    "CLEAN": "Clear",
     "LISTENING": "Listening...",
-    "NO_SPEECHRECOGNITION": "Speech recognition not available",
-    "NO_DESCRIPTION": "No detailed description available"
+    "NO_SPEECHRECOGNITION": "Speech recognition not available"
   },
-  "SETTINGS": {
-    "GENERAL_GROUP": "General",
-    "SYSTEM_GROUP": "System",
-    "BASE_MAP": "Base map",
-    "LANGUAGE": "Language",
-    "ALERT": "Alert",
-    "GEOCODING": "Geocoding service",
-    "CURRENT_TRACK": "Current track color",
-    "REFERENCE_TRACK": "Reference track color",
-    "SAVED_TRACK_ALTITUDE": "Saved track altitude",
-    "UPLOAD_MAPS": "Download maps",
-    "UPLOADMAP": "Map successfully downloaded",
-    "REMOVEMAP": "The map has been removed",
-    "FAILED_REMOVEMAP": "Failed to remove map",
-    "FAILED_UPLOADMAP": "Error downloading map",
-    "REMOVE_MAP": "Remove maps",
-    "MAP_UPDATED": "Map provider updated",
-    "OFFLINE_MAPS": "Offline Maps",
-    "DOWNLOADED": "Downloaded"
-  },
-  "ARCHIVE": {
-    "TRACKS": "Tracks",
-    "SHOW": "Show",
-    "HIDE": "Hide",
-    "ALL": "all",
-    "REMOVE_TRACK": "Remove",
-    "EDIT_TRACK": "Edit",
-    "EXPORT_TRACK": "Export",
-    "ALL_DISPLAYED": "All tracks displayed",
-    "ALL_HIDDEN": "All tracks hidden",
-    "VISIBLE_LABEL": "Visible",
-    "CANCEL": "Cancel",
-    "HEADER": "Confirm deletion",
-    "MESSAGE": "Selected tracks will be permanently deleted",
-    "TITLE": "Share a track",
-    "TEXT": "Here is the requested track",
-    "DIALOG_TITLE": "Share with Gmail only",
-    "TOAST1": "Track shared successfully",
-    "TOAST2": "Export failed",
-    "TOAST3": "Selected tracks have been removed",
-    "TOAST4": "Error loading collection",
-    "LOADING_ERROR": "Error loading track",
-    "EMPTY_TRACKS": "No valid coordinates found in files"
-  },
+"ARCHIVE": {
+  "TRACKS": "Tracks",
+  "SHOW": "Show",
+  "HIDE": "Hide",
+  "ALL": "All",
+  "REMOVE_TRACK": "Delete",
+  "EDIT_TRACK": "Edit",
+  "EXPORT_TRACK": "Export",
+  "ALL_DISPLAYED": "All tracks are being displayed",
+  "ALL_HIDDEN": "All tracks have been hidden",
+  "VISIBLE_LABEL": "Visible",
+  "CANCEL": "Cancel",
+  "HEADER": "Confirm deletion",
+  "MESSAGE": "Selected tracks will be permanently deleted",
+  "TITLE": "Share a track",
+  "TEXT": "Here is the requested track",
+  "DIALOG_TITLE": "Share via Gmail only",
+  "TOAST1": "Track shared successfully",
+  "TOAST2": "Export failed",
+  "TOAST3": "Selected tracks have been deleted",
+  "TOAST4": "Error loading collection",
+  "LOADING_ERROR": "Error loading track",
+  "EMPTY_TRACKS": "No valid coordinates found in files",
+  "TRACK_UPDATED": "Track updated successfully"
+},
   "CANVAS": {
     "ARCTITLE": "REFERENCE TRACK",
     "CURTITLE": "CURRENT TRACK",
